--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,11 @@
 			<artifactId>dropwizard-core</artifactId>
 			<version>0.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.princeton-java-algorithms</groupId>
+			<artifactId>algorithms</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
