--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<version>0.9.0</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.googlecode.princeton-java-algorithms</groupId>
 			<artifactId>algorithms</artifactId>
 			<version>4.0.1</version>
